// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/lib/tasks/install > .start > exits with error when installing on unsupported os > error when installing on unsupported os 1`] = `
"Error: The Cypress App could not be installed. Your machine does not meet the operating system requirements.

https://on.cypress.io/app/get-started/install-cypress#System-requirements

----------

Platform: win32-ia32
"
`;

exports[`/lib/tasks/install > .start > is silent when log level is silent > silent install 1 1`] = `
"[STARTED] Task without title.
[SUCCESS] Task without title.
[STARTED] Task without title.
[SUCCESS] Task without title.
[STARTED] Task without title.
[SUCCESS] Task without title.
"
`;

exports[`/lib/tasks/install > .start > non-stable builds > logs a warning about installing a pre-release > pre-release warning 1`] = `
"⚠ Warning: You are installing a pre-release build of Cypress.

Bugs may be present which do not exist in production builds.

This build was created from:
  * Commit SHA: 3b7f0b5c59def1e9b5f385bd585c9b2836706c29
  * Commit Branch: aBranchName
  * Commit Timestamp: 1996-11-27T00:00:00.000Z

Installing Cypress (version: https://cdn.cypress.io/beta/binary/0.0.0-development/darwin-x64/aBranchName-3b7f0b5c59def1e9b5f385bd585c9b2836706c29/cypress.zip)

[STARTED] Task without title.
[TITLE]  Downloaded Cypress     
[SUCCESS]  Downloaded Cypress     
[STARTED] Task without title.
[TITLE]  Unzipped Cypress       
[SUCCESS]  Unzipped Cypress       
[STARTED] Task without title.
[TITLE]  Finished Installation   /cache/Cypress/1.2.3
[SUCCESS]  Finished Installation   /cache/Cypress/1.2.3

You can now open Cypress by running one of the following, depending on your package manager:

- npx cypress open
- yarn cypress open
- pnpm cypress open

https://on.cypress.io/opening-the-app

"
`;

exports[`/lib/tasks/install > .start > override version > as a global install > logs global warning and download > warning installing as global 1 1`] = `
"
Cypress x.x.x is installed in /cache/Cypress/1.2.3

Installing Cypress (version: 1.2.3)

[STARTED] Task without title.
[TITLE]  Downloaded Cypress
[SUCCESS]  Downloaded Cypress
[STARTED] Task without title.
[TITLE]  Unzipped Cypress
[SUCCESS]  Unzipped Cypress
[STARTED] Task without title.
[TITLE]  Finished Installation   /cache/Cypress/1.2.3
[SUCCESS]  Finished Installation   /cache/Cypress/1.2.3

⚠ Warning: It looks like you've installed Cypress globally.

  The recommended way to install Cypress is as a devDependency per project.

  You should probably run these commands:

  - npm uninstall -g cypress
  - npm install --save-dev cypress
"
`;

exports[`/lib/tasks/install > .start > override version > failed write access to cache directory > logs error on failure > invalid cache directory 1 1`] = `
"Error: Cypress cannot write to the cache directory due to file permissions

See discussion and possible solutions at
https://github.com/cypress-io/cypress/issues/1281

----------

Failed to access /invalid/cache/dir:

EACCES: permission denied, mkdir '/invalid'

----------

Platform: darwin-x64 (Foo - OsVersion)
Cypress Version: 1.2.3
"
`;

exports[`/lib/tasks/install > .start > override version > warns when specifying cypress version in env > specify version in env vars 1 1`] = `
"⚠ Warning: Forcing a binary version different than the default.

  The CLI expected to install version: 1.2.3

  Instead we will install version: 0.12.1

  These versions may not work properly together.

Installing Cypress (version: 0.12.1)

[STARTED] Task without title.
[TITLE]  Downloaded Cypress
[SUCCESS]  Downloaded Cypress
[STARTED] Task without title.
[TITLE]  Unzipped Cypress
[SUCCESS]  Unzipped Cypress
[STARTED] Task without title.
[TITLE]  Finished Installation   /cache/Cypress/1.2.3
[SUCCESS]  Finished Installation   /cache/Cypress/1.2.3

You can now open Cypress by running one of the following, depending on your package manager:

- npx cypress open
- yarn cypress open
- pnpm cypress open

https://on.cypress.io/opening-the-app

"
`;

exports[`/lib/tasks/install > .start > override version > when getting installed version does not match needed version > logs message and starts download > installed version does not match needed version 1 1`] = `
"
Cypress x.x.x is installed in /cache/Cypress/1.2.3

Installing Cypress (version: 1.2.3)

[STARTED] Task without title.
[TITLE]  Downloaded Cypress
[SUCCESS]  Downloaded Cypress
[STARTED] Task without title.
[TITLE]  Unzipped Cypress
[SUCCESS]  Unzipped Cypress
[STARTED] Task without title.
[TITLE]  Finished Installation   /cache/Cypress/1.2.3
[SUCCESS]  Finished Installation   /cache/Cypress/1.2.3

You can now open Cypress by running one of the following, depending on your package manager:

- npx cypress open
- yarn cypress open
- pnpm cypress open

https://on.cypress.io/opening-the-app

"
`;

exports[`/lib/tasks/install > .start > override version > when getting installed version fails > logs message and starts download > continues installing on failure 1 1`] = `
"Installing Cypress (version: 1.2.3)

[STARTED] Task without title.
[TITLE]  Downloaded Cypress
[SUCCESS]  Downloaded Cypress
[STARTED] Task without title.
[TITLE]  Unzipped Cypress
[SUCCESS]  Unzipped Cypress
[STARTED] Task without title.
[TITLE]  Finished Installation   /cache/Cypress/1.2.3
[SUCCESS]  Finished Installation   /cache/Cypress/1.2.3

You can now open Cypress by running one of the following, depending on your package manager:

- npx cypress open
- yarn cypress open
- pnpm cypress open

https://on.cypress.io/opening-the-app

"
`;

exports[`/lib/tasks/install > .start > override version > when running in CI > uses verbose renderer > installing in ci 1 1`] = `
"
Cypress x.x.x is installed in /cache/Cypress/1.2.3

Installing Cypress (version: 1.2.3)

[STARTED] Task without title.
[SUCCESS] Task without title.
[STARTED] Task without title.
[SUCCESS] Task without title.
[STARTED] Task without title.
[SUCCESS] Task without title.

You can now open Cypress by running one of the following, depending on your package manager:

- npx cypress open
- yarn cypress open
- pnpm cypress open

https://on.cypress.io/opening-the-app

"
`;

exports[`/lib/tasks/install > .start > override version > when there is no install version > logs message and starts download > installs without existing installation 1 1`] = `
"Installing Cypress (version: 1.2.3)

[STARTED] Task without title.
[TITLE]  Downloaded Cypress
[SUCCESS]  Downloaded Cypress
[STARTED] Task without title.
[TITLE]  Unzipped Cypress
[SUCCESS]  Unzipped Cypress
[STARTED] Task without title.
[TITLE]  Finished Installation   /cache/Cypress/1.2.3
[SUCCESS]  Finished Installation   /cache/Cypress/1.2.3

You can now open Cypress by running one of the following, depending on your package manager:

- npx cypress open
- yarn cypress open
- pnpm cypress open

https://on.cypress.io/opening-the-app

"
`;

exports[`/lib/tasks/install > .start > override version > when version is already installed > logs 'skipping install' when explicit cypress install > version already installed - cypress install 1 1`] = `
"
Cypress 1.2.3 is installed in /cache/Cypress/1.2.3

Skipping installation:

  Pass the --force option if you'd like to reinstall anyway.
"
`;

exports[`/lib/tasks/install > .start > override version > when version is already installed > logs when already installed when run from postInstall > version already installed - postInstall 1 1`] = `
"
Cypress 1.2.3 is installed in /cache/Cypress/1.2.3

"
`;

exports[`/lib/tasks/install > .start > override version > with force: true > logs message and starts download > forcing true always installs 1 1`] = `
"
Cypress 1.2.3 is installed in /cache/Cypress/1.2.3

Installing Cypress (version: 1.2.3)

[STARTED] Task without title.
[TITLE]  Downloaded Cypress
[SUCCESS]  Downloaded Cypress
[STARTED] Task without title.
[TITLE]  Unzipped Cypress
[SUCCESS]  Unzipped Cypress
[STARTED] Task without title.
[TITLE]  Finished Installation   /cache/Cypress/1.2.3
[SUCCESS]  Finished Installation   /cache/Cypress/1.2.3

You can now open Cypress by running one of the following, depending on your package manager:

- npx cypress open
- yarn cypress open
- pnpm cypress open

https://on.cypress.io/opening-the-app

"
`;

exports[`/lib/tasks/install > .start > skips install > when environment variable is set > skip installation 1 1`] = `
"Note: Skipping binary installation: Environment variable CYPRESS_INSTALL_BINARY = 0.

"
`;
